--- a/UiBank RPA Process/project.json
+++ b/UiBank RPA Process/project.json
@@ -41,11 +41,6 @@
       },
       {
         "editingStatus": "InProgress",
-        "testCaseId": "1682e286-9369-45fa-9bfd-730b0bb26370",
-        "fileName": "TestCases\\Environment\\VerifyEndpoint.xaml"
-      },
-      {
-        "editingStatus": "InProgress",
         "testCaseId": "ff5cc4d8-634a-471f-bcf9-d8f8b8f4fe40",
         "fileName": "TestCases\\NegativeAccountsProcess\\VerifyNegativeAccountsUi.xaml"
       },
@@ -68,6 +63,11 @@
         "editingStatus": "Publishable",
         "testCaseId": "5e186ee4-8f79-4aae-940d-25a3740ac171",
         "fileName": "TestCases\\Environment\\EndPointCheck.xaml"
+      },
+      {
+        "editingStatus": "Publishable",
+        "testCaseId": "f01afce8-55b8-4982-a176-febe2b94ccc6",
+        "fileName": "TestCases\\Login\\LoginOK.xaml"
       }
     ]
   },
